Testing Java 16 + Gradle 7